# gemness

./: .gitignore  AGENTS.md  INSTALL.md  MANIFEST.in  README.md  implementation-notes.html  pyproject.toml
.agents/skills/gemness/: SKILL.md
docs/: antigravity-observer.md  chat_resume.md  codex-mcp-config.example.toml  gemini-mcp-observer.goal.md  gemini-mcp-stabilization-gemness-review.md  gemini-observer.md
scripts/: install_gemness_trigger.py  mcp_smoke_test.py
src/gemness/: __init__.py  cli.py  codex_host.py  codex_install.py  codex_trust.py  config.py  gemness_trigger.py  json_utils.py  mcp_metadata.py  mcp_smoke.py  models.py  observer.py  observer_client.py  process_registry.py  redaction.py  review.py  run_manager.py  runner.py  schema_validation.py  server.py  telemetry.py  tools.py  web.py  workspace.py
tests/: test_antigravity_trace_cleanup.py  test_codex_install.py  test_install_gemness_trigger.py  test_json_and_schema.py  test_observer.py  test_process_registry.py  test_runner.py  test_server.py  test_tools_integration.py  test_web_api.py  test_workspace_policy.py
