[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gemness"
version = "0.1.3"
description = "Local Gemness server with observer and intervention UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0",
]

[project.scripts]
gemness = "gemness.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
